--- a/style.css
+++ b/style.css
@@ -7,62 +7,9 @@
 /* Body Styles */
 body {
   color: #222;
-  padding-top: 80px;
+  padding-top: 67px;
   background-color: #49568e;
 }
-
-/* Sticky Navbar  */
-
-/* .nav {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.1);
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000; Ensure navbar is on top 
-  transition: all 0.3s ease-in-out;
-}
-
-.nav .navContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
-  transition: all 0.3s ease-in-out;
-}
-
-.nav ul {
-  display: flex;
-  list-style-type: none;
-  align-items: center;
-  justify-content: center;
-}
-
-.nav a {
-  color: #fff;
-  text-decoration: none;
-  padding: 7px 15px;
-  transition: all 0.3s ease-in-out;
-}
-
-.nav.active {
-  background-color: #fff;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-.nav.active a {
-  color: #222;
-}
-
-.nav.active .box {
-  padding: 10px 0;
-}
-
-.nav a.current,
-.nav a:hover {
-  color: #7385ef;
-  font-weight: bold;
-} */
 
 .port {
   background-image: url(assets/image/portfolio1.1.png);
@@ -70,25 +17,25 @@ body {
   background-size: cover;
   background-position: bottom center;
   height: 100vh;
+  width: 100%;
+  max-width: 100%;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   position: relative;
-  margin-bottom: 0px;
+  margin-bottom: 100px;
   z-index: -2;
 }
 
-.port::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: -1;
+.portcontent h1 {
+  font-size: 150%;
+  margin: 0px 0;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .portcontent h2 {
@@ -98,6 +45,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-top: 20px;
 }
 
 .portcontent p {
@@ -107,7 +55,9 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-left: 50px;
+  padding-left: 120px;
+  padding-right: 120px;
+  padding-top: 30px;
 }
 
 .parallax {
@@ -117,4 +67,118 @@ body {
 .parallax {
   padding-top: 5%;
   padding-bottom: 1%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding-top: 10px;
+}
+
+.learn-more-btn {
+  background-color: #ffffff00;
+  color: white;
+  border: none; /* Removes default border */
+  padding: 10px 20px; /* Adds padding inside the button */
+  font-size: 16px;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 100px;
+}
+/* Hover effect */
+.learn-more-btn:hover {
+  background-color: #ffffff;
+  color: #373a77;
+}
+
+/*image containers*/
+.cont {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  padding: 100px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.img-cont {
+  display: flex;
+  gap: 20px;
+}
+
+.image {
+  position: relative;
+  width: 500px;
+  overflow: hidden;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  margin: auto;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
+}
+
+.content:hover {
+  opacity: 1;
+}
+
+.content h1 {
+  font-size: 45px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.content p {
+  font-size: 19px;
+  color: #a1a1a1;
+}
+
+.btn-container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding-top: 10px;
+}
+
+.contact-btn {
+  background-color: #ffffff00;
+  color: white;
+  border: none; /* Removes default border */
+  padding: 10px 20px; /* Adds padding inside the button */
+  position: absolute;
+  right: 800px;
+  font-size: 16px;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 100px;
+}
+/* Hover effect */
+.contact-btn:hover {
+  background-color: #ffffff;
+  color: #373a77;
 }
