--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 
 .parallax {
   background: url(./assets/image/fishwb.jpg) no-repeat fixed 50%;
+  background-size: cover;
 }
 
 .parallax {
