--- a/style/nav.css
+++ b/style/nav.css
@@ -1,5 +1,5 @@
 /* Sticky Navbar */
-.nav {
+nav {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.1);
   top: 0;
@@ -7,45 +7,77 @@
   right: 0;
   z-index: 1000; /* Ensure navbar is on top */
   transition: all 0.3s ease-in-out;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 67px;
 }
 
-.nav .navContainer {
+nav .navContainer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 20px 0;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 100%;
+
   transition: all 0.3s ease-in-out;
 }
 
-.nav ul {
+nav ul {
   display: flex;
   list-style-type: none;
   align-items: center;
   justify-content: center;
+
+  height: 100%;
 }
 
-.nav a {
+nav ul li {
+  height: 100%;
+  /* margin: 0 10px; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav a {
   color: #fff;
   text-decoration: none;
   padding: 7px 15px;
   transition: all 0.3s ease-in-out;
+
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 100px;
 }
 
-.nav.active {
+/* nav a:hover {
+  background-color: #fff;
+  color: #7385ef;
+} */
+
+nav.active {
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-.nav.active a {
+nav.active a {
   color: #222;
 }
 
-.nav.active .box {
+nav.active .box {
   padding: 10px 0;
 }
 
-.nav a.current,
-.nav a:hover {
+nav a.current,
+nav a:hover {
   color: #7385ef;
   font-weight: bold;
 }
