--- a/style.css
+++ b/style.css
@@ -19,10 +19,9 @@ body {
 
 .port {
   background-image: url(assets/image/portfolio1.1.png);
-  background-repeat: none;
   background-size: cover;
   background-position: bottom center;
-  height: 90vh;
+  height: 100vh;
   width: 100%;
   max-width: 100%;
   color: #fff;
@@ -71,13 +70,13 @@ body {
 }
 
 .parallax {
-  background: url(./assets/image/fishwb.jpg) no-repeat fixed 50%;
+  background: url(./assets/image/fishwb.2.jpg) no-repeat fixed 50%;
   background-size: cover;
 }
 
 .parallax {
   padding-top: 5%;
-  padding-bottom: 1%;
+  padding-bottom: 5%;
   margin-top: 100px;
   margin-bottom: 100px;
 }
@@ -173,18 +172,19 @@ img {
   background-color: transparent;
   color: white;
   border: none; /* Removes default border */
-  padding: 10px 20px; /* Adds padding inside the button */
+  padding: 15px 15px; /* Adds padding inside the button */
   font-size: 16px;
   border-radius: 7px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  margin-top: 30px;
   margin-bottom: 100px;
-  width: 200px;
+  width: 100px;
   align-self: center;
 }
 /* Hover effect */
 .contact-btn:hover {
-  background-color: #ffffff;
+  background-color: #ffffffa8;
   color: #373a77;
 }
 
@@ -207,6 +207,8 @@ img {
   .image {
     width: 70vw;
     height: 70vw;
+    position: relative;
+    margin-bottom: 50px;
   }
 
   .parallax {
@@ -255,4 +257,61 @@ img {
   .cont {
     margin-top: 50px;
   }
+
+  .instagram-button {
+    font-size: 20px;
+  }
+}
+
+footer {
+  padding: 20px;
+  background-color: #0000004d;
+  color: #fff;
+  text-align: center;
+}
+
+.social-media {
+  margin-top: 10px;
+}
+
+.instagram-button {
+  color: #ffffff84;
+  font-size: 30px;
+  text-decoration: none;
+  margin: 0 10px;
+  display: inline-block;
+  transition: transform 0.5s ease, color 0.3s ease;
+}
+
+.instagram-button:hover {
+  color: #fff;
+  transform: scale(1.2);
+}
+
+.github-button {
+  color: #ffffff84;
+  font-size: 30px;
+  text-decoration: none;
+  margin: 0 10px;
+  display: inline-block;
+  transition: transform 0.5s ease, color 0.3s ease;
+}
+
+.github-button:hover {
+  color: #fff;
+  transform: scale(1.2);
+}
+
+.email-button {
+  color: #ffffff84;
+  font-size: 30px;
+  text-decoration: none;
+  margin: 0 10px;
+  display: inline-block;
+  transition: transform 0.5s ease, opacity 0.3s ease;
+}
+
+.email-button:hover {
+  color: #fff;
+  transform: scale(1.2);
 }
